--- a/styles/styles.css
+++ b/styles/styles.css
@@ -340,7 +340,7 @@ footer {
 .back-to-top {
     display: block;
     text-align: center;
-    margin: 40px auto 40px auto;
+    margin: 40 auto 40 auto;
     color: #111;
     text-decoration: underline;
     font-size: large;
@@ -349,3 +349,4 @@ footer {
 body.scratchmybackground-page {
     background-color: #ffe6cc; /* pick any color you want */
 }
+
