--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,7 @@ a {
 
 .navbar {
   background: rgba(17, 17, 17, 0.95);
-  font-size: 1.25rem;
+  font-size: 16px
   padding: 16px 42px;
   display: flex;
   justify-content: space-between;
@@ -49,7 +49,7 @@ a {
 }
 
 .logo {
-  height: 60px;    /* adjust until it feels right */
+  height: 80px;    /* adjust until it feels right */
   width: auto;
   display: block;
 }
@@ -328,6 +328,7 @@ footer {
     overflow-x: hidden;
   }
 }
+
 
 
 
